Update index.html, remove placeholder.svg, and enhance form handling
- Updated the title and meta tags in `index.html` to reflect the new branding for "Previo by Cargo Claro".
- Added a favicon link to `index.html`.
- Removed the unused `placeholder.svg` file from the public directory.
- Improved the `usePrevioForm` and `PrevioComplete` hooks to fetch the organization ID correctly before creating or updating records, ensuring accurate data handling.
- Adjusted the `Auth`, `Index`, and `PrevioComplete` components for better layout and user experience, including updated button text and styling.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>customs-checker</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Previo by Cargo Claro</title>
+    <meta name="description" content="Gestiona tus procesos de importación de manera eficiente" />
+    <meta name="author" content="Cargo Claro" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
